display contact details when name is clicked

--- a/views/input.erb
+++ b/views/input.erb
@@ -24,5 +24,5 @@
 </form>
 
 <% @contacts.each do |contact| %>
-  <h4><a href="/contacts/<%= contact.id %>"><%= contact.full_name %></a></h4>
+  <h4><a href="/contact/<%= contact.id %>"><%= contact.full_name %></a></h4>
 <% end %>
